[web] Add: Bug #4950 nickname will cover logout button if it is too long

--- a/source/web/src/static/styles/project/_imports.less
+++ b/source/web/src/static/styles/project/_imports.less
@@ -73,3 +73,10 @@
   border-radius: 8px;
   overflow: hidden;
 }
+
+.clipped(@max-width:@max-width) {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    max-width: @max-width;
+}
